[package]
name = "yaml-test-7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
strum = { version = "0.25", features = [] }
strum_macros = "0.25"
lazy_static = { version = "1.4.0", features = [] }
ternary-tree = "0.1.1"
trie-rs = "0.1.1"
hashbrown = { version = "0.14.3", features = [] }
edit-distance = { version = "2.1.0", features = [] }